# bank-widget

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  test_log.txt
src/: __init__.py  decorators.py  external_api.py  filters.py  generators.py  main.py  masks.py  processing.py  transactions.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
