[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = "A project for bank widget"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.lint.dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
isort = "^5.9.1"
mypy = "^0.910"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \\.git
  | \\.venv
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 119
skip = [".git", "__pycache__", "venv"]

[tool.mypy]
python_version = 3.9
strict = false
disallow_untyped_defs = true
warn_return_any = true
exclude = "(venv|\\.git|__pycache__)"
