[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = "Банковский Виджет"
authors = ["Ваше Имя <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^1.3.0"
requests = "^2.26.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
